@startuml
title __PIZZA's Class Diagram__\n

  namespace patterns.decorator.pizza {
    class patterns.decorator.pizza.Cheese {
        + Cheese()
        + cost()
        + getDescription()
    }
  }
  

  namespace patterns.decorator.pizza {
    class patterns.decorator.pizza.Olives {
        + Olives()
        + cost()
        + getDescription()
    }
  }
  

  namespace patterns.decorator.pizza {
    abstract class patterns.decorator.pizza.Pizza {
        ~ description : String
        {abstract} + cost()
        + getDescription()
    }
  }
  

  namespace patterns.decorator.pizza {
    class patterns.decorator.pizza.PizzaStore {
        {static} + main()
    }
  }
  

  namespace patterns.decorator.pizza {
    class patterns.decorator.pizza.ThickCrustPizza {
        + ThickCrustPizza()
        + cost()
    }
  }
  

  namespace patterns.decorator.pizza {
    class patterns.decorator.pizza.ThincrustPizza {
        + ThincrustPizza()
        + cost()
    }
  }
  

  namespace patterns.decorator.pizza {
    abstract class patterns.decorator.pizza.ToppingDecorator {
        {abstract} + getDescription()
    }
  }
  

  patterns.decorator.pizza.Cheese -up-|> patterns.decorator.pizza.ToppingDecorator
  patterns.decorator.pizza.Olives -up-|> patterns.decorator.pizza.ToppingDecorator
  patterns.decorator.pizza.ThickCrustPizza -up-|> patterns.decorator.pizza.Pizza
  patterns.decorator.pizza.ThincrustPizza -up-|> patterns.decorator.pizza.Pizza
  patterns.decorator.pizza.ToppingDecorator -up-|> patterns.decorator.pizza.Pizza
  patterns.decorator.pizza.ToppingDecorator o-- patterns.decorator.pizza.Pizza : pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
